# lxc

./: meson.build  meson_options.txt
.github/workflows/: code-test.yml  main.yml  sync.yml
config/init/common/: lxc-net-android.in  lxc-net.in  meson.build
config/init/module/: boot-completed.sh.in
config/templates/: common.minijail.seccomp  meson.build
src/include/: getgrgid_r.c  meson.build  pthread_ext.h  pthread_setcancelstate.c
src/lxc/: aaudio.c  aaudio.h  conf.c  confile.c  lxccontainer.c  lxcseccomp.h  meson.build  network.c  rexec.c  seccomp_minijail.c  start.c  syscall_numbers.h  syscall_wrappers.h
src/lxc/cgroups/: cgfsng.c
src/lxc/cmd/: lxc_aaudiod.c  lxc_networkd.c  meson.build
src/lxc/lsm/: selinux.c
templates/: lxc-download.in
